fixed images not showing in deployment

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -114,7 +114,7 @@
     font-size: 0.8rem;
     padding: 0.25rem 0.75rem;
     background-color: var(--accent);
-    color: var(--primary);
+    color: black;
     border-radius: 20px;
     font-weight: 500;
   }
